# learn-opengl

./: .gitattributes  CMakeLists.txt  camera.cpp  camera.hpp  main.cpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  shader.cpp  shader.hpp
ext/include/glad/: glad.h
ext/src/: glad.c
models/: plane.mtl
models/grass/: grass.mtl
models/window/: window.mtl
shaders/: shader.fs  shader.vs
shaders/asteroid/: shader.vs
shaders/blend/: shader.fs
shaders/depth/: shader.fs
shaders/emap/: shader.fs  shader.vs
shaders/geometry_debugnormals/: shader.gs
shaders/geometry_explode/: shader.fs  shader.gs  shader.vs
shaders/geometry_passthrough/: shader.gs  shader.vs
shaders/lighting/: shader.fs  shader.vs
shaders/monochroma/: shader.fs
shaders/post_processing/: shader.fs  shader.vs
shaders/skybox/: shader.fs  shader.vs
shaders/unlit/: shader.fs
